# chat-bot-langchain

./: pyproject.toml  requirements.txt
CineSage/: core.py
chat-models/: UIchatbot.py  chat.py  chatbot.py  nividia.py
embedding-models/: embeddings.py  huggingface_embedding.py
